fix naming issue

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Sails Bower Vue",
+  "name": "sails-bower-vue-project",
   "private": true,
   "version": "0.0.0",
   "description": "A Sails application",
